refactor(wip): dashboard auditing with Envers, alerts integration and cleanup
- refactor DashboardService to use Envers (AuditReader) and merge revisions
- integrate alert system into dashboard data flow
- add minStock to Product and propagate to DTOs
- implement Alert system (entity, repository, service, mapper)
- trigger alert processing on stock changes (ProductService, PaymentService)
- add and configure Envers auditing for Product, Payment, Employee, Customer
- enforce privacy: audit only id for Employee and Customer
- create custom AuditRevisionEntity and AuditRevisionListener (username tracking)
- rename actionId to audId in AuditDto and update AuditI18nKeys
- fix Envers mapping issues with @Audited/@NotAudited
- fix MapStruct mappings in AlertMapper
- update tests and fixtures; all passing
- remove legacy AuditLog (entity, repository, service)
- remove top-products feature

WIP: feature not complete yet